--- a/.github/workflows/node-pr.yml
+++ b/.github/workflows/node-pr.yml
@@ -1,6 +1,6 @@
 name: Node.js CI
 
-on: [push, pull_request]
+on: [pull_request]
 
 jobs:
   build:
@@ -15,5 +15,3 @@ jobs:
         node-version: '16.x'
     - name: Install dependencies
       run: npm install
-    - name: Run tests
-      run: npm run test:headless
