--- a/.github/workflows/node-main.yml
+++ b/.github/workflows/node-main.yml
@@ -1,4 +1,4 @@
-name: Node.js CI
+name: Node.js CI on main
 
 on:
   push:
@@ -6,10 +6,9 @@ on:
       - main
 
 jobs:
-  build:
-
+  unit-tests:
+    name: Unit Tests
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js 16.x
