--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "test:headless": "ng test --browsers=FirefoxHeadless"
+    "test:headless": "ng test --browsers=ChromeHeadlessNoSandbox --watch=false"
   },
   "private": true,
   "dependencies": {
