--- a/.github/workflows/node-pr.yml
+++ b/.github/workflows/node-pr.yml
@@ -14,3 +14,5 @@ jobs:
         node-version: '16.x'
     - name: Install dependencies
       run: npm install
+    - name: Run tests
+      run: npm test
