--- a/.github/workflows/node-pr.yml
+++ b/.github/workflows/node-pr.yml
@@ -15,4 +15,4 @@ jobs:
     - name: Install dependencies
       run: npm install
     - name: Run tests
-      run: npm test:headless
+      run: npm run test:headless
