--- a/angular.json
+++ b/angular.json
@@ -92,6 +92,7 @@
             "styles": [
               "src/styles.css"
             ],
+            "codeCoverage": true,
             "scripts": []
           }
         }
