--- a/.github/workflows/node-main.yml
+++ b/.github/workflows/node-main.yml
@@ -17,3 +17,10 @@ jobs:
         node-version: '16.x'
     - name: Install dependencies
       run: npm install
+    - name: Run tests
+      run: npm run test:headless
+    - name: Archive code coverage results
+      uses: actions/upload-artifact@v3
+      with:
+        name: code-coverage-report
+        path: coverage/angular-app/*
