--- a/.github/workflows/node-pr.yml
+++ b/.github/workflows/node-pr.yml
@@ -21,3 +21,11 @@ jobs:
       with:
         name: code-coverage-report
         path: coverage/angular-app/*
+  build-docker:
+    name: Build Docker Image
+    runs-on: ubuntu-latest
+    needs: unit-tests
+    steps:
+    - uses: actions/checkout@v3
+    - name: Build the Docker image
+      run: docker build . --file Dockerfile --tag angular-app:$(date +%s)
