--- a/.github/workflows/node-pr.yml
+++ b/.github/workflows/node-pr.yml
@@ -1,4 +1,4 @@
-name: Node.js CI on PR
+name: Pull Requests
 
 on: [pull_request]
 
@@ -21,11 +21,19 @@ jobs:
       with:
         name: code-coverage-report
         path: coverage/angular-app/*
-  build-docker:
-    name: Build Docker Image
+  docker:
+    name: Build and Push Docker Image
     runs-on: ubuntu-latest
     needs: unit-tests
     steps:
     - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag angular-app:$(date +%s)
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: Build and push
+      uses: docker/build-push-action@v4
+      with:
+        push: true
+        tags: kerobero/angular-app:$(date +%s)
