--- a/.github/workflows/node-pr.yml
+++ b/.github/workflows/node-pr.yml
@@ -36,4 +36,4 @@ jobs:
       uses: docker/build-push-action@v4
       with:
         push: true
-        tags: kerobero/angular-app:latest
+        tags: kerobero/angular-app:beta
