--- a/.github/workflows/node-main.yml
+++ b/.github/workflows/node-main.yml
@@ -24,3 +24,19 @@ jobs:
       with:
         name: code-coverage-report
         path: coverage/angular-app/*
+  docker:
+    name: Build and Push Docker Image
+    runs-on: ubuntu-latest
+    needs: unit-tests
+    steps:
+    - uses: actions/checkout@v3
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: Build and push
+      uses: docker/build-push-action@v4
+      with:
+        push: true
+        tags: kerobero/angular-app:beta
