--- a/.github/workflows/node-main.yml
+++ b/.github/workflows/node-main.yml
@@ -39,4 +39,4 @@ jobs:
       uses: docker/build-push-action@v4
       with:
         push: true
-        tags: kerobero/angular-app:beta
+        tags: kerobero/angular-app:latest
